--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "user-app",
-  "version": "1.0.0",
+  "version": "1.0.0", 
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
