updated ts config issues

--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "type": "module",
   "main": "dist/index.js",
   "license": "MIT",
-
   "engines": {
     "node": "20.x"
   },
-
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "tsx watch --tsconfig ./tsconfig.json src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js",  
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
@@ -30,9 +28,9 @@
     "typeorm": "^0.3.22",
     "xlsx": "^0.18.5"
   },
-
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
@@ -41,6 +39,7 @@
     "@typescript-eslint/parser": "^8.44.0",
     "eslint": "^9.35.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.2"
   }
 }
