--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "esModuleInterop": true,
+    "target": "ES2020",
+
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "resolveJsonModule": true,
+
+    "strict": true,
+    "strictPropertyInitialization": false,
+
     "rootDir": "src",
     "outDir": "dist",
-    "baseUrl": "/"
-  },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+
+    "esModuleInterop": true,
+    "skipLibCheck": true
+  }
 }
