--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "user-app",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "main": "dist/index.js",
   "license": "MIT",
   "engines": {
