--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "tsx watch --tsconfig ./tsconfig.json src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",  
+    "start": "node dist/index.js",
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
@@ -21,8 +21,8 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.2",
+    "mysql": "^2.18.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.22",
