--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.16.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.22",
